test/force-app/main/default/objects/Labor_Selection__c/Labor_Selection__c.object-meta.xml
<CustomObject>
    <label>Labor Selection</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Labor Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>