test/force-app/main/default/objects/Labor_Selection__c/fields/DC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DC_Capacity__c</fullName>
    <formula>Design_AEP__r.System_Size_kW_DC_calc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>