test/force-app/main/default/objects/Labor_Selection__c/fields/Deactivate_Processes__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Processes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Processes</label>
    <type>Checkbox</type>
</CustomField>