test/force-app/main/default/objects/Labor_Selection__c/fields/Design_AEP__c.field-meta.xml
<CustomField>
    <fullName>Design_AEP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Design &amp; AEP</label>
    <referenceTo>Design_AEP__c</referenceTo>
    <relationshipLabel>Labor Selections</relationshipLabel>
    <relationshipName>Labor_Selections</relationshipName>
    <type>Lookup</type>
</CustomField>