test/force-app/main/default/objects/Labor_Selection__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor</label>
    <referenceTo>Labor__c</referenceTo>
    <relationshipLabel>Labor Selections</relationshipLabel>
    <relationshipName>Labor_Selections</relationshipName>
    <type>Lookup</type>
</CustomField>