test/force-app/main/default/objects/Labor_Selection__c/fields/NEW_Cost_Assumption_Set__c.field-meta.xml
<CustomField>
    <fullName>NEW_Cost_Assumption_Set__c</fullName>
    <label>CRU</label>
    <referenceTo>NEW_Cost_Assumption_Set__c</referenceTo>
    <relationshipLabel>Labor Selections</relationshipLabel>
    <relationshipName>Labor_Selections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>