test/force-app/main/default/objects/Labor_Selection__c/fields/Permitting__c.field-meta.xml
<CustomField>
    <fullName>Permitting__c</fullName>
    <inlineHelpText>Used to calculate cost for building and electrical permits only</inlineHelpText>
    <label>Permitting %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>