test/force-app/main/default/objects/Labor_Selection__c/fields/Prevailing_Wage_Adder__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage_Adder__c</fullName>
    <label>Prevailing Wage Adder ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>