test/force-app/main/default/objects/Labor_Selection__c/fields/Procore_Alias__c.field-meta.xml
<CustomField>
    <fullName>Procore_Alias__c</fullName>
    <label>Procore Alias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-201-Foundations</fullName>
            </value>
            <value>
                <fullName>2-201-Rack Installation / Steel Erection</fullName>
            </value>
            <value>
                <fullName>2-201-Water Management / Decking / Snowguards</fullName>
            </value>
            <value>
                <fullName>2-201-Module Installation</fullName>
            </value>
            <value>
                <fullName>2-202-DC Electrical Installation</fullName>
            </value>
            <value>
                <fullName>2-202-AC Electrical Installation</fullName>
            </value>
            <value>
                <fullName>2-202-Medium Voltage Installation</fullName>
            </value>
            <value>
                <fullName>2-202-Other Electrical Installation</fullName>
            </value>
            <value>
                <fullName>2-203-Tree Removal</fullName>
            </value>
            <value>
                <fullName>2-203-Tree Stump Removal</fullName>
            </value>
            <value>
                <fullName>2-203-Trenching</fullName>
            </value>
            <value>
                <fullName>2-203-Road Installation</fullName>
            </value>
            <value>
                <fullName>2-203-Fencing</fullName>
            </value>
            <value>
                <fullName>2-203-Paving</fullName>
            </value>
            <value>
                <fullName>2-203-Landscaping</fullName>
            </value>
            <value>
                <fullName>2-203-Erosion Control</fullName>
            </value>
            <value>
                <fullName>2-203-Other Civil Installation</fullName>
            </value>
            <value>
                <fullName>2-204-Electrical ES Installation</fullName>
            </value>
            <value>
                <fullName>2-204-Civil ES Installation</fullName>
            </value>
            <value>
                <fullName>2-204-Control System ES Installation</fullName>
            </value>
            <value>
                <fullName>2-204-Other ES Installation</fullName>
            </value>
            <value>
                <fullName>2-205-Roofing</fullName>
            </value>
            <value>
                <fullName>2-205-Commissioning</fullName>
            </value>
            <value>
                <fullName>2-205-Site Management</fullName>
            </value>
            <value>
                <fullName>2-205-EHS</fullName>
            </value>
            <value>
                <fullName>2-205-Other - General Installation</fullName>
            </value>
            <value>
                <fullName>2-205-Labor Contingency</fullName>
            </value>
            <value>
                <fullName>3-301-Title Search and Report</fullName>
            </value>
            <value>
                <fullName>3-301-Title Insurance</fullName>
            </value>
            <value>
                <fullName>3-301-Easement Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>